--- a/config-files/config_ant_PD_inversion_dHdt_init.cfg
+++ b/config-files/config_ant_PD_inversion_dHdt_init.cfg
@@ -17,7 +17,7 @@
   ! =====================
 
     start_time_of_run_config                     = 0.0                              ! [yr] Start time of the simulation
-    end_time_of_run_config                       = 40000.0                          ! [yr] End   time of the simulation
+    end_time_of_run_config                       = 50000.0                          ! [yr] End   time of the simulation
 
   ! == Which model regions to simulate
   ! ==================================
@@ -174,13 +174,13 @@
     filename_initial_mesh_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
 
     ! Resolutions for different parts of the ice sheet
-    maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
-    maximum_resolution_grounded_ice_config       = 50e3                             ! [m]          Maximum resolution for grounded ice
-    maximum_resolution_floating_ice_config       = 30e3                             ! [m]          Maximum resolution for floating ice
-    maximum_resolution_grounding_line_config     = 20e3                             ! [m]          Maximum resolution for the grounding line
-    maximum_resolution_calving_front_config      = 30e3                             ! [m]          Maximum resolution for the calving front
-    maximum_resolution_ice_front_config          = 50e3                             ! [m]          Maximum resolution for the ice front
-    maximum_resolution_coastline_config          = 50e3                             ! [m]          Maximum resolution for the coastline
+    maximum_resolution_uniform_config            = 240e3                            ! [m]          Maximum resolution for the entire domain
+    maximum_resolution_grounded_ice_config       = 80e3                             ! [m]          Maximum resolution for grounded ice
+    maximum_resolution_floating_ice_config       = 50e3                             ! [m]          Maximum resolution for floating ice
+    maximum_resolution_grounding_line_config     = 50e3                             ! [m]          Maximum resolution for the grounding line
+    maximum_resolution_calving_front_config      = 50e3                             ! [m]          Maximum resolution for the calving front
+    maximum_resolution_ice_front_config          = 80e3                             ! [m]          Maximum resolution for the ice front
+    maximum_resolution_coastline_config          = 80e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
     grounding_line_width_config                  = 12e3                             ! [m]          Width of the band around the grounding line that should get this resolution
@@ -189,20 +189,20 @@
     coastline_width_config                       = 12e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
-    choice_regions_of_interest_config            = ''                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
-    ROI_maximum_resolution_uniform_config        = 200e3                            ! [m]          Maximum resolution for the entire domain
-    ROI_maximum_resolution_grounded_ice_config   = 05e3                             ! [m]          Maximum resolution for grounded ice
-    ROI_maximum_resolution_floating_ice_config   = 02e3                             ! [m]          Maximum resolution for floating ice
-    ROI_maximum_resolution_grounding_line_config = 02e3                             ! [m]          Maximum resolution for the grounding line
-    ROI_maximum_resolution_calving_front_config  = 02e3                             ! [m]          Maximum resolution for the calving front
-    ROI_maximum_resolution_ice_front_config      = 05e3                             ! [m]          Maximum resolution for the ice front
-    ROI_maximum_resolution_coastline_config      = 05e3                             ! [m]          Maximum resolution for the coastline
+    choice_regions_of_interest_config            = 'RiiserLarsen'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
+    ROI_maximum_resolution_uniform_config        = 50e3                            ! [m]          Maximum resolution for the entire domain
+    ROI_maximum_resolution_grounded_ice_config   = 30e3                             ! [m]          Maximum resolution for grounded ice
+    ROI_maximum_resolution_floating_ice_config   = 30e3                             ! [m]          Maximum resolution for floating ice
+    ROI_maximum_resolution_grounding_line_config = 30e3                             ! [m]          Maximum resolution for the grounding line
+    ROI_maximum_resolution_calving_front_config  = 30e3                             ! [m]          Maximum resolution for the calving front
+    ROI_maximum_resolution_ice_front_config      = 30e3                             ! [m]          Maximum resolution for the ice front
+    ROI_maximum_resolution_coastline_config      = 30e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
-    ROI_grounding_line_width_config              = 05e3                             ! [m]          Width of the band around the grounding line that should get this resolution
-    ROI_calving_front_width_config               = 05e3                             ! [m]          Width of the band around the calving front that should get this resolution
-    ROI_ice_front_width_config                   = 05e3                             ! [m]          Width of the band around the ice front that should get this resolution
-    ROI_coastline_width_config                   = 05e3                             ! [m]          Width of the band around the coastline that should get this resolution
+    ROI_grounding_line_width_config              = 8e3                             ! [m]          Width of the band around the grounding line that should get this resolution
+    ROI_calving_front_width_config               = 8e3                             ! [m]          Width of the band around the calving front that should get this resolution
+    ROI_ice_front_width_config                   = 8e3                             ! [m]          Width of the band around the ice front that should get this resolution
+    ROI_coastline_width_config                   = 8e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Mesh update settings
     allow_mesh_updates_config                    = .FALSE.                          ! [-]          Whether or not mesh updates are allowed
@@ -325,12 +325,14 @@
     BC_H_south_config                            = 'zero'
     BC_H_north_config                            = 'zero'
 
+    !do_allow_change_only_in_ROI_config           = .TRUE.                           ! Whether or not to allow changes in ice thickness only in regions of interest (ROIs)
+
   ! == Ice dynamics - target quantities
   ! ===================================
 
     ! Target dHi_dt
-    do_target_dHi_dt_config                      = .TRUE.                           ! Whether or not to use a target dHi_dt field from an external file to alter the modelled one
-    do_limit_target_dHi_dt_to_SMB_config         = .TRUE.                           ! Whether or not to limit a target dHi_dt field to available SMB in that area, so it does not melt all ice there
+    do_target_dHi_dt_config                      = .FALSE.                           ! Whether or not to use a target dHi_dt field from an external file to alter the modelled one
+    do_limit_target_dHi_dt_to_SMB_config         = .FALSE.                           ! Whether or not to limit a target dHi_dt field to available SMB in that area, so it does not melt all ice there
     target_dHi_dt_t_end_config                   = 9.9e9                            ! End time of target dHi_dt application
 
     ! Files containing a target dHi_dt for inversions
@@ -408,7 +410,7 @@
     protect_grounded_mask_t_end_config           = 20000.0                          ! End time of grounded mask protection. After this time, it will be allowed to thin and become afloat
 
     ! Fix/delay ice thickness evolution
-    do_fixiness_before_start_config              = .TRUE.                           ! Whether or not to apply fixiness values before fixiness_t_start
+    do_fixiness_before_start_config              = .FALSE.                           ! Whether or not to apply fixiness values before fixiness_t_start
     fixiness_t_start_config                      = -9.9E9                           ! Start time of linear transition between fixed/delayed and free evolution
     fixiness_t_end_config                        = -8.8E8                           ! End   time of linear transition between fixed/delayed and free evolution
     fixiness_H_gl_gr_config                      = 0.0                              ! Fix (1), release (0), or delay grounded ice geometry evolution
@@ -419,7 +421,7 @@
     fixiness_H_freeocean_config                  = .FALSE.                          ! Fix (.TRUE.) ice-free vertices between fixiness_t_start and fixiness_t_end
 
     ! Limit ice thickness evolution
-    do_limitness_before_start_config             = .TRUE.                           ! Whether or not to apply limitness values before limitness_t_start
+    do_limitness_before_start_config             = .FALSE.                           ! Whether or not to apply limitness values before limitness_t_start
     limitness_t_start_config                     = -9.9E9                           ! Start time of linear transition between limited and free evolution
     limitness_t_end_config                       = -8.8E8                           ! End   time of linear transition between limited and free evolution
     limitness_H_gl_gr_config                     = +9.9E9                           ! Maximum departure from PD ice thickness allowed at peak limitness
@@ -440,7 +442,7 @@
   ! == Bed roughness
   ! ================
 
-    choice_bed_roughness_config                  = 'read_from_file'                 ! Choice of source for friction coefficients: "uniform", "parameterised", "read_from_file"
+    choice_bed_roughness_config                  = 'uniform'                 ! Choice of source for friction coefficients: "uniform", "parameterised", "read_from_file"
     choice_bed_roughness_parameterised_config    = 'Martin2011'                     ! "Martin2011", "SSA_icestream", "MISMIP+", "BIVMIP_A", "BIVMIP_B", "BIVMIP_C"
     ! Paths to files containing bed roughness fields for the chosen sliding law
     filename_bed_roughness_NAM_config            = ''
@@ -460,7 +462,7 @@
     slid_Tsai2015_beta_sq_uniform_config         = 1.0E4                            ! Uniform value for beta_sq  in the Tsai2015 sliding law
     slid_Schoof2005_alpha_sq_uniform_config      = 0.5                              ! Uniform value for alpha_sq in the Schoof2005 sliding law
     slid_Schoof2005_beta_sq_uniform_config       = 1.0E4                            ! Uniform value for beta_sq  in the Schoof2005 sliding law
-    slid_ZI_phi_fric_uniform_config              = 45.0                             ! Uniform value for phi_fric in the Zoet-Iverson sliding law
+    slid_ZI_phi_fric_uniform_config              = 30.0                             ! Uniform value for phi_fric in the Zoet-Iverson sliding law
     ! Parameters for bed roughness parameterisations
     Martin2011till_phi_Hb_min_config             = -500.0                           ! Martin et al. (2011) bed roughness parameterisation: low-end  Hb  value of bedrock-dependent till friction angle
     Martin2011till_phi_Hb_max_config             = 0.0                              ! Martin et al. (2011) bed roughness parameterisation: high-end Hb  value of bedrock-dependent till friction angle
@@ -473,10 +475,10 @@
     ! General
     do_bed_roughness_nudging_config              = .TRUE.                          !           Whether or not to nudge the basal roughness
     choice_bed_roughness_nudging_method_config   = 'H_dHdt_flowline'                               !           Choice of bed roughness nudging method
-    choice_inversion_target_geometry_config      = 'PD'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
+    choice_inversion_target_geometry_config      = 'init'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
     bed_roughness_nudging_dt_config              = 5.0                              ! [yr]      Time step for bed roughness updates
     bed_roughness_nudging_t_start_config         = -9.9E9                           ! [yr]      Earliest model time when nudging is allowed
-    bed_roughness_nudging_t_end_config           = +9.9E9                           ! [yr]      Latest   model time when nudging is allowed
+    bed_roughness_nudging_t_end_config           = 40000.0                           ! [yr]      Latest   model time when nudging is allowed
 
     ! Basal inversion model based on flowline-averaged values of H and dH/dt
     bednudge_H_dHdt_flowline_t_scale_config      = 150.0                            ! [yr]      Timescale
@@ -519,7 +521,7 @@
     timeframe_initial_ice_temperature_ANT_config = 1E9
     ! Thermodynamical model
     choice_thermo_model_config                   = '3D_heat_equation'               ! Choice of thermodynamical model: "none", "3D_heat_equation"
-    dt_thermodynamics_config                     = 10.0                              ! [yr] Time step for the thermodynamical model
+    dt_thermodynamics_config                     = 2.0                              ! [yr] Time step for the thermodynamical model
     Hi_min_thermo_config                         = 10.0                             ! [m]  Ice thinner than this is assumed to have a temperature equal to the annual mean surface temperature throughout the vertical column
     choice_GL_temperature_BC_config              = 'pmp'                            ! Choice of basal boundary condition at grounding lines: 'grounded', 'subgrid', 'pmp'
     choice_ice_heat_capacity_config              = 'Pounder1965'                    ! Choice of ice heat capacity model: "uniform", "Pounder1965"
@@ -599,7 +601,7 @@
     filename_ocean_snapshot_NAM_config           = ''
     filename_ocean_snapshot_EAS_config           = ''
     filename_ocean_snapshot_GRL_config           = ''
-    filename_ocean_snapshot_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
+    filename_ocean_snapshot_ANT_config           = '/Users/frre9931/Documents/PhD/ocean_ISMIP6/Jourdain2020_ocean.nc'
 
   ! == Surface mass balance
   ! =======================
@@ -725,7 +727,7 @@
     uniform_BMB_config                           = 0.0
 
     ! "parameterised"
-    BMB_Favier2019_gamma_config                  = 20.0E-5
+    BMB_Favier2019_gamma_config                  = 5.0E-5
 
     ! "inverted"
     BMB_inversion_t_start_config                 = -9.9E9                           ! [yr] Only nudge melt rates when the model time lies between t_start and t_end
