--- a/config-files_tetralith/config_tetralith_PD_smooth_Hb_retreat_mask_NMP.cfg
+++ b/config-files_tetralith/config_tetralith_PD_smooth_Hb_retreat_mask_NMP.cfg
@@ -226,9 +226,6 @@
     dx_square_grid_smooth_GRL_config             = 20000.0
     dx_square_grid_smooth_ANT_config             = 20000.0
 
-    do_use_ISMIP_future_shelf_collapse_forcing_config   = .TRUE.                    ! If set to TRUE, the calving front is forced to retreat according to the ISMIP future calving front collapse scenario
-    ISMIP_future_shelf_collapse_forcing_filename_config = '/home/x_frare/data/retreat_masks/mask_iceshelf_calving.nc' ! Path to a file containing the calving front retreat forcing mask for Antarctica
-
   ! == The scaled vertical coordinate zeta
   ! ======================================
 
@@ -401,6 +398,10 @@
     remove_shelves_larger_than_PD_config         = .TRUE.                          ! If set to TRUE, all floating ice beyond the present-day calving front is removed (used for some Antarctic spin-ups)
     continental_shelf_calving_config             = .FALSE.                          ! If set to TRUE, all ice beyond the continental shelf edge (set by a maximum depth) is removed
     continental_shelf_min_height_config          = -1500.0                          ! Maximum depth of the continental shelf
+
+    do_use_ISMIP_future_shelf_collapse_forcing_config   = .TRUE.                    ! If set to TRUE, the calving front is forced to retreat according to the ISMIP future calving front collapse scenario
+    shelf_collapse_type_config                          = 'BMB'                 ! Type of calving collapse to aplly: 'BMB' or 'calving'
+    ISMIP_future_shelf_collapse_forcing_filename_config = '/Users/frre9931/Documents/PhD/RiiserLarsen/mask_iceshelf_calving.nc' ! Path to a file containing the calving front retreat forcing mask for Antarctica
 
   ! == Ice dynamics - stabilisation
   ! ===============================
