--- a/config-files_tetralith/config_tetralith_PD_retreat_mask_calving.cfg
+++ b/config-files_tetralith/config_tetralith_PD_retreat_mask_calving.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_retreat_mask_calving'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_retreat_mask_PMP_calving'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -90,7 +90,7 @@
     filename_refgeo_init_NAM_config              = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_init_EAS_config              = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_init_GRL_config              = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_init_ANT_config              = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20/main_output_ANT_LAST.nc'
+    filename_refgeo_init_ANT_config              = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20_PMP/main_output_ANT_LAST.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
@@ -111,7 +111,7 @@
     filename_refgeo_PD_NAM_config                = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_PD_EAS_config                = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_PD_GRL_config                = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_PD_ANT_config                = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20/main_output_ANT_LAST.nc'
+    filename_refgeo_PD_ANT_config                = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20_PMP/main_output_ANT_LAST.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
@@ -132,7 +132,7 @@
     filename_refgeo_GIAeq_NAM_config             = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_EAS_config             = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_GRL_config             = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_GIAeq_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20/main_output_ANT_LAST.nc'
+    filename_refgeo_GIAeq_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20_PMP/main_output_ANT_LAST.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
@@ -171,7 +171,7 @@
     filename_initial_mesh_NAM_config             = ''
     filename_initial_mesh_EAS_config             = ''
     filename_initial_mesh_GRL_config             = ''
-    filename_initial_mesh_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20/main_output_ANT_LAST.nc'
+    filename_initial_mesh_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20_PMP/main_output_ANT_LAST.nc'
 
     ! Resolutions for different parts of the ice sheet
     maximum_resolution_uniform_config            = 240e3                            ! [m]          Maximum resolution for the entire domain
@@ -457,7 +457,7 @@
     filename_bed_roughness_NAM_config            = ''
     filename_bed_roughness_EAS_config            = ''
     filename_bed_roughness_GRL_config            = ''
-    filename_bed_roughness_ANT_config            = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20/main_output_ANT_LAST.nc'
+    filename_bed_roughness_ANT_config            = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init_R-LIS_gamma20_PMP/main_output_ANT_LAST.nc'
     ! Timeframes to read from the bed roughness file (set to 1E9    if the file has no time dimension)
     timeframe_bed_roughness_NAM_config           = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_bed_roughness_EAS_config           = 1E9
@@ -699,8 +699,8 @@
     !BMB_inversion_t_end_config                   = +9.9E9                           ! [yr] End   time for BMB inversion based on computed thinning rates in marine areas
 
     ! Grounding line treatment
-    do_subgrid_BMB_at_grounding_line_config      = .FALSE.                          ! Whether or not to apply basal melt rates under a partially floating grounding line; if so, use choice_BMB_subgrid; if not, apply "NMP"
-    choice_BMB_subgrid_config                    = 'FCMP'                           ! Choice of sub-grid BMB scheme: "FCMP", "PMP" (following Leguy et al., 2021)
+    do_subgrid_BMB_at_grounding_line_config      = .TRUE.                          ! Whether or not to apply basal melt rates under a partially floating grounding line; if so, use choice_BMB_subgrid; if not, apply "NMP"
+    choice_BMB_subgrid_config                    = 'PMP'                           ! Choice of sub-grid BMB scheme: "FCMP", "PMP" (following Leguy et al., 2021)
 
     ! Choice of BMB model
     choice_BMB_model_NAM_config                  = 'uniform'
